# pycsvy

./: .all-contributorsrc  .pre-commit-config.yaml  404.html  CITATION.cff  README.md  gen_ref_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  ci_template.yml  deploy-docs.yml  publish.yml
csvy/: __init__.py  read.py  readers.py  utils.py  validators.py  write.py  writers.py
csvy/validators/: __init__.py  csv_dialect.py  registry.py  table_schema.py
docs/: gen_ref_nav.py  index.md
pycsvy/: __init__.py  readers.py
reference/SUMMARY/: index.html
reference/csvy/: index.html
reference/csvy/readers/: index.html
reference/csvy/validators/: index.html
reference/csvy/writers/: index.html
search/: search_index.json
tests/: __init__.py  array_data.csv  conftest.py  data.csv  data.csvy  data_comment.csvy  data_read_into_dict.csvy  test_basic_read.csvy  test_basic_read.py  test_csvy.py  test_read.py  test_read_into_dict.py  test_utils.py  test_validators.py  test_write.py
tests/validators/: test_table_schema.py  test_validators.py
