[tool.poetry]
name = "pycsvy"
version = "0.2.2"
description = "Python reader/writer for CSV files with YAML header information."
authors = ["Diego Alonso Álvarez <d.alonso-alvarez@imperial.ac.uk>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ImperialCollegeLondon/pycsvy"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
]

packages = [
    { include = "csvy" },
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

# A list of all of the optional dependencies, which are included in the
# below `extras`. They can be opted into by apps.
numpy = { version = "^1.24.2", optional = true }
pandas = { version = "^2.0.0", optional = true }
polars = { version = "^1.8.2", optional = true }

[tool.poetry.extras]
numpy = ["numpy"]
pandas = ["pandas"]
polars = ["polars"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
pytest-mock = "^3.7.0"
pre-commit = "^2.18.1"
numpy = "^1.24.2"
pandas = "^2.0.0"
types-PyYAML = "^6.0.7"
bump2version = "^1.0.1"
coverage = "^7.1.0"
ruff = "^0.6.8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.5.7"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-section-index = "^0.3.4"

[tool.ruff]
target-version = "py39"
lint.select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
lint.pydocstyle.convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
